# avalon-rs

./: Cargo.toml
src/: game.rs  lib.rs  server.rs  session.rs
static/: websocket.html
