[package]
name = "avalon-rs"
version = "0.2.0"
authors = ["Siliang Cao <siliang.cao@gmail.com>"]
edition = "2018"

[[bin]]
name = "avalon-chat-server"
path = "src/bin/chat-server.rs"

[dependencies]
actix-rt = "1.0.0"
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-files = "0.2.1"

rand = "0.6"
bytes = "0.5.3"
byteorder = "1.1"
futures = "0.3.1"
env_logger = "0.6"
serde = "1.0"
serde_json = "1.0"

failure = "0.1.3"
itertools = "0.6"
argh = "0.1"
lazy_static = "1.2.0"
log = "0.4"
